--- a/wwwroot/css/app.css
+++ b/wwwroot/css/app.css
@@ -120,3 +120,21 @@ h1:focus {
         border: none;
         border-radius: 6px;
     }
+.popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.popup-content {
+    background-color: white;
+    padding: 1rem 2rem;
+    border-radius: 8px;
+    box-shadow: 0 0 10px #000;
+}
