--- a/wwwroot/css/app.css
+++ b/wwwroot/css/app.css
@@ -126,15 +126,16 @@ h1:focus {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgba(0,0,0,0.5);
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 999;
 }
-
 .popup-content {
-    background-color: white;
-    padding: 1rem 2rem;
+    background: white;
+    padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 0 10px #000;
+    box-shadow: 0 0 10px black;
+    text-align: center;
 }
